--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,8 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'com.google.guava:guava:11.0.2'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
